[package]
name = "mossy-stone-brick-monster-egg"
version = "0.1.0"
authors = ["Gegy <gegy1000@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "http", "rustls_tokio_0_2_backend"] }
tokio = { version = "0.2", features = ["macros", "fs"] }
async-trait = "0.1"

thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1.4"

log = "0.4"
env_logger = "0.7.1"
