[package]
name = "mossy-stone-brick-monster-egg"
version = "0.1.0"
authors = ["Gegy <gegy1000@gmail.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "http", "rustls_backend"] }
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
async-trait = "0.1"

thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1.5"

log = "0.4"
env_logger = "0.9"
